# klogrs

./: Cargo.toml  README.md
src/: cli.rs  lib.rs  main.rs
src/kubernetes/: client.rs  log.rs  mod.rs  pod.rs
src/log_processor/: filter.rs  formatter.rs  mod.rs  pipe.rs
src/utils/: color.rs  mod.rs
tests/: functionality_tests.rs  level_filter_tests.rs  parameter_tests.rs
