[package]
name = "klogrs"
version = "0.1.0"
edition = "2021"
authors = ["klogrs Team"]
description = "A command-line tool for reading and processing Kubernetes pod logs"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.28", features = ["full"] }
futures = "0.3"
async-stream = "0.3"

# Kubernetes client
kube = { version = "0.82", features = ["client", "derive"] }
k8s-openapi = { version = "0.18", features = ["v1_26"] }
openssl = { version = "0.10", features = ["vendored"] }

# CLI
clap = { version = "4.3", features = ["derive"] }
dialoguer = "0.10"
indicatif = "0.17"

# Logging and output
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
console = "0.15"
termcolor = "1.2"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
regex = "1.8"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
hyper-rustls = { version = "0.24.2", features = ["native-tokio"] }
colored = "2.0"

[dev-dependencies]
tempfile = "3.5"
mockall = "0.11"
rstest = "0.17"
test-log = "0.2"